@@ -1,5 +1,6 @@
 package it.gov.pagopa.pu.bff.mapper;
 
+import it.gov.pagopa.pu.bff.dto.PaymentOptionsExtendedDTO;
 import it.gov.pagopa.pu.bff.dto.generated.DebtPositionDetailDTO;
 import it.gov.pagopa.pu.bff.util.TestUtils;
 import it.gov.pagopa.pu.debtpositions.dto.generated.*;
@@ -9,19 +10,30 @@ import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
+import org.mockito.Mock;
+import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import uk.co.jemos.podam.api.PodamFactory;
 
 import java.util.List;
+import java.util.stream.Stream;
+
+import static it.gov.pagopa.pu.bff.util.Constants.INSTALLMENT_REMITTANCE_INFORMATION_PLACEHOLDER;
+import static org.mockito.ArgumentMatchers.anyList;
 
 @ExtendWith(MockitoExtension.class)
 class DebtPositionMapperTest {
   private DebtPositionMapper mapper;
+  @Mock
+  private PaymentOptionsMapper paymentOptionsMapperMock;
   private final PodamFactory podamFactory = TestUtils.getPodamFactory();
 
   @BeforeEach
   void setUp() {
-    mapper = new DebtPositionMapper();
+    mapper = new DebtPositionMapper(paymentOptionsMapperMock);
   }
 
   @Test
@@ -43,6 +55,12 @@ class DebtPositionMapperTest {
 
     DebtPositionTypeOrg debtPositionTypeOrg = podamFactory.manufacturePojo(DebtPositionTypeOrg.class);
 
+    PaymentOptionsExtendedDTO paymentOptionsExtendedDTO = podamFactory.manufacturePojo(PaymentOptionsExtendedDTO.class);
+    paymentOptionsExtendedDTO.setInstallments(List.of(installment4, installment3, installment1, installment2));
+
+    Mockito.when(paymentOptionsMapperMock.mapToExtended(List.of(paymentOption)))
+      .thenReturn(List.of(paymentOptionsExtendedDTO));
+
     DebtPositionDetailDTO result = mapper.mapToDebtPositionDetailDTO(debtPositionDTO,debtPositionTypeOrg);
 
     Assertions.assertNotNull(result);
@@ -50,10 +68,10 @@ class DebtPositionMapperTest {
     TestUtils.checkNotNullFields(result.getDebtor());
 
     // Assert right Installments order
-    Assertions.assertEquals(installment4, result.getPaymentOptions().getFirst().getInstallments().get(0));
-    Assertions.assertEquals(installment3, result.getPaymentOptions().getFirst().getInstallments().get(1));
-    Assertions.assertEquals(installment1, result.getPaymentOptions().getFirst().getInstallments().get(2));
-    Assertions.assertEquals(installment2, result.getPaymentOptions().getFirst().getInstallments().get(3));
+    Assertions.assertEquals(installment4.getInstallmentId(), result.getPaymentOptions().getFirst().getInstallments().get(0).getInstallmentId());
+    Assertions.assertEquals(installment3.getInstallmentId(), result.getPaymentOptions().getFirst().getInstallments().get(1).getInstallmentId());
+    Assertions.assertEquals(installment1.getInstallmentId(), result.getPaymentOptions().getFirst().getInstallments().get(2).getInstallmentId());
+    Assertions.assertEquals(installment2.getInstallmentId(), result.getPaymentOptions().getFirst().getInstallments().get(3).getInstallmentId());
 
     verifyDebtPositionDetailDTO(result,debtPositionDTO,debtPositionTypeOrg);
   }
@@ -88,6 +106,43 @@ class DebtPositionMapperTest {
     verifyDebtPositionDetailDTO(result,debtPositionDTO,debtPositionTypeOrg);
   }
 
+  @ParameterizedTest
+  @MethodSource("provideRemittanceInformation")
+  void givenInstallmentWithVariousRemittanceInformationWhenResolveRemittanceInformationThenCorrectValueIsSet(
+    String remittanceInformation,
+    String originalRemittanceInformation,
+    String expectedTransferRemittanceInformation,
+    String expectedInstallmentRemittanceInformation) {
+
+    TransferDTO transfer = podamFactory.manufacturePojo(TransferDTO.class);
+    transfer.setRemittanceInformation(expectedTransferRemittanceInformation);
+    InstallmentDTO installment = podamFactory.manufacturePojo(InstallmentDTO.class);
+    installment.transfers(List.of(transfer));
+    installment.setRemittanceInformation(expectedInstallmentRemittanceInformation);
+    installment.setOriginalRemittanceInformation(originalRemittanceInformation);
+    PaymentOptionDTO paymentOption = podamFactory.manufacturePojo(PaymentOptionDTO.class);
+    paymentOption.setInstallments(List.of(installment));
+    DebtPositionDTO debtPositionDTO = podamFactory.manufacturePojo(DebtPositionDTO.class);
+    debtPositionDTO.setMultiDebtor(false);
+    debtPositionDTO.setPaymentOptions(List.of(paymentOption));
+
+    DebtPositionTypeOrg debtPositionTypeOrg = podamFactory.manufacturePojo(DebtPositionTypeOrg.class);
+
+    PaymentOptionsExtendedDTO paymentOptionsExtendedDTO = podamFactory.manufacturePojo(PaymentOptionsExtendedDTO.class);
+    paymentOptionsExtendedDTO.setInstallments(List.of(installment));
+
+    Mockito.when(paymentOptionsMapperMock.mapToExtended(anyList()))
+      .thenReturn(List.of(paymentOptionsExtendedDTO));
+
+    DebtPositionDetailDTO result = mapper.mapToDebtPositionDetailDTO(debtPositionDTO,debtPositionTypeOrg);
+
+    Assertions.assertNotNull(result);
+    Assertions.assertEquals(expectedTransferRemittanceInformation, result.getPaymentOptions().getFirst().getInstallments().getFirst().getTransfers().getFirst().getRemittanceInformation());
+
+    String installmentRemittanceInformation = result.getPaymentOptions().getFirst().getInstallments().getFirst().getRemittanceInformation();
+    Assertions.assertEquals(expectedInstallmentRemittanceInformation, installmentRemittanceInformation);
+  }
+
   private void verifyDebtPositionDetailDTO(DebtPositionDetailDTO result, DebtPositionDTO debtPositionDTO,
     DebtPositionTypeOrg debtPositionTypeOrg) {
     if(debtPositionTypeOrg!=null){
@@ -97,7 +152,7 @@ class DebtPositionMapperTest {
       Assertions.assertNull(result.getDebtPositionTypeOrgCode());
       Assertions.assertNull(result.getDebtPositionTypeOrgDescription());
     }
-    TestUtils.reflectionEqualsByName(debtPositionDTO,result);
+    TestUtils.reflectionEqualsByName(debtPositionDTO,result, "paymentOptions");
     verifyDebtor(result.getDebtor(),debtPositionDTO);
   }
 
@@ -110,5 +165,13 @@ class DebtPositionMapperTest {
     }else{
       TestUtils.reflectionEqualsByName(debtor,debtPositionDTO.getPaymentOptions().getFirst().getInstallments().getFirst().getDebtor());
     }
+  }
+
+  private static Stream<Arguments> provideRemittanceInformation() {
+    return Stream.of(
+      Arguments.of("remittanceInformation", null, "remittanceInformation", "remittanceInformation"),
+      Arguments.of("remittanceInformation", "originalRemittanceInformation", "remittanceInformation", "originalRemittanceInformation"),
+      Arguments.of(INSTALLMENT_REMITTANCE_INFORMATION_PLACEHOLDER +" with remittanceInformation", "originalRemittanceInformation", "originalRemittanceInformation", "originalRemittanceInformation")
+    );
   }
 }
